2017-10-27  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild): Rename customisation group.
	(ebuild-mode-portdir, ebuild-mode-eapi-list)
	(ebuild-mode-fix-whitespace, ebuild-mode-update-copyright)
	(ebuild-mode-delete-cvs-line): Update accordingly.
	(ebuild-mode-update-copyright): Update lwarn type.

	* glep-mode.el (glep-mode-insert-skeleton): Update from GLEP 2.
	Inclusion of that modification under GPL-2+ acked by mgorny.

2017-10-15  Ulrich Müller  <ulm@gentoo.org>

	* glep-mode.el: The template text in glep-mode-insert-skeleton has
	not much changed from the last CVS version of GLEP 2, which is in
	the public domain. We can therefore base it on that version and
	avoid the complications of including CC-BY-SA licensed material.
	Relicense glep-mode to GPL version 2, or any later version.

	* ebuild-mode.el (ebuild-run-echangelog): Drop echangelog support,
	gentoolkit-dev is deprecated and gentoolkit does not provide the
	command any more.
	(ebuild-mode-map, ebuild-mode-menu): Drop keybinding and menu
	entry for ebuild-run-echangelog.
	* ebuild-mode.texi (ebuild-mode): Update documentation.

	* glep-mode.el (glep-mode-insert-skeleton): Update URLs of GLEP 1
	and GLEP 2. Update info on header format from GLEP 1.

2017-10-14  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.39 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* ebuild-mode.texi (glep-mode): Document the new mode.

2017-09-17  Ulrich Müller  <ulm@gentoo.org>

	* glep-mode.el: New file. Mode for editing Gentoo Linux
	Enhancement Proposals that are written in reStructuredText.
	* Makefile (DISTFILES): Add glep-mode.el.

2017-09-15  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.38 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2017-04-07  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.37 released.

	* ebuild-mode.el (ebuild-mode-make-keywords-list): XEmacs 21.4
	doesn't have delete-dups, use delete-duplicates instead.
